[project]
name = "point-mcp"
version = "0.1.0"
description = "MCP server for the Point Knowledge API — verified knowledge for AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "PinchPoint", email = "hello@pinchpoint.dev" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "knowledge",
    "api",
    "ai",
    "search",
    "citations",
    "documentation",
    "claude",
    "cursor",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://pinchpoint.dev/point"
Documentation = "https://pinchpoint.dev/point/docs/mcp"
Repository = "https://github.com/mcdonaldsam/point-mcp"
"Bug Tracker" = "https://github.com/mcdonaldsam/point-mcp/issues"
Changelog = "https://github.com/mcdonaldsam/point-mcp/blob/main/CHANGELOG.md"

[project.scripts]
point-mcp = "point_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/point_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
